--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
 	  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		
-		<script type="text/javascript" src="http://localhost:4000/socket.io/socket.io.js"></script>
+		<script type="text/javascript" src="http://coffee.redinger.me:4321/socket.io/socket.io.js"></script>
 		
 	<script type="text/javascript">
     $(document).ready(function() {
 			//socket = new io.Socket('127.0.0.1',{port:4000});
-			socket = io.connect('127.0.0.1:4000');
+			socket = io.connect('http://coffee.redinger.me:4321');
 			console.log("connecting...");
 			socket.on('connect', function() {
 				console.log('connect');
