--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <head>
 	  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		
-		<!--		<script type="text/javascript" src="http://coffee.redinger.me:4321/socket.io/socket.io.js"></script> -->
-				<script src="http://localhost:4321/socket.io/socket.io.js"></script>
+	  <script type="text/javascript" src="http://coffee.redinger.me:4321/socket.io/socket.io.js"></script> 
+		<!--		<script src="http://localhost:4321/socket.io/socket.io.js"></script> -->
 		
 	<script type="text/javascript">
     $(document).ready(function() {
-			//socket = io.connect('http://coffee.redinger.me:4321');
-			socket = io.connect('http://localhost:4321');
+			socket = io.connect('http://coffee.redinger.me:4321');
+			//socket = io.connect('http://localhost:4321');
 			console.log("connecting...");
 			socket.on('connect', function() {
 				console.log('connect');
