serve static css and js files in preparation for adding flot chart

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		
 	  <script type="text/javascript" src="http://coffee.redinger.me:4321/socket.io/socket.io.js"></script> 
+	  <script type="text/javascript" src="http://coffee.redinger.me:4321/jquery.flot.js"></script> 
 		<!--		<script src="http://localhost:4321/socket.io/socket.io.js"></script> -->
 		
 	<script type="text/javascript">
