--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		
 	  <script type="text/javascript" src="http://coffee.redinger.me:4321/socket.io/socket.io.js"></script> 
 	  <script type="text/javascript" src="http://coffee.redinger.me:4321/jquery.flot.js"></script> 
+	  <script type="text/javascript" src="http://coffee.redinger.me:4321/jquery.flot.tooltip.min.js"></script> 
 		<!--		<script src="http://localhost:4321/socket.io/socket.io.js"></script> -->
 		
 		<script type="text/javascript">
