push new brews to socket, 'work' with IE in client

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	  <script type="text/javascript" src="http://coffee.redinger.me:4321/jquery.flot.js"></script> 
 	  <script type="text/javascript" src="http://coffee.redinger.me:4321/jquery.flot.tooltip.min.js"></script> 
 		<!--		<script src="http://localhost:4321/socket.io/socket.io.js"></script> -->
-		
+<!--[if IE ]>
+       <script>alert("Nerds don't let nerds use IE");</script>
+<![endif]-->
 		<script type="text/javascript">
     var d1=[];
     zone_delta=(new Date()).getTimezoneOffset()*60000;
