--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ $(document).ready(function() {
 	//	$('#log ul').append('<li>' + message + '</li>');          
 	  message[0] = message[0]-zone_delta;
 		d1.push(message);
-		window.scrollTo(0, document.body.scrollHeight);
+//		window.scrollTo(0, document.body.scrollHeight);
 		re_flot();
 	});
 
